--- a/Projekt-programowanie/Views/Auth/Login.cshtml
+++ b/Projekt-programowanie/Views/Auth/Login.cshtml
@@ -8,6 +8,13 @@
 <div class="row">
 	<div class="col-md-3 card p-3">
 		<h2 class="text-center text-info">
+			@if (TempData["SuccessMessage"] != null)
+			{
+				<div class="alert alert-success">
+					@TempData["SuccessMessage"]
+				</div>
+			}
+
 			<form asp-action="Login" method="POST">
 				<div asp-validation-summary="ModelOnly"></div>
 					<div class="mb-1">
