fix: modify layout view

--- a/Projekt-programowanie/Views/Shared/_Layout.cshtml
+++ b/Projekt-programowanie/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - Student Schedule Manager</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Projekt_programowanie.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/Projekt-programowanie.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
