refactor: Repair namespaces

--- a/Projekt-programowanie/Views/_ViewImports.cshtml
+++ b/Projekt-programowanie/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-﻿@using Projekt_programowanie
-@using Projekt_programowanie.Models
+﻿@using ProjektProgramowanie
+@using ProjektProgramowanie.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
