--- a/Projekt-programowanie/Views/Shared/_Layout.cshtml
+++ b/Projekt-programowanie/Views/Shared/_Layout.cshtml
@@ -19,6 +19,13 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+
+                         @if (User.IsInRole("admin")) 
+                         { 
+                            <li class="nav-item"> 
+                                 <a class="nav-link text-dark" asp-controller="Users" asp-action="Index">Users</a> 
+                             </li> 
+                         } 
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
