--- a/Projekt-programowanie/Views/Shared/_Layout.cshtml
+++ b/Projekt-programowanie/Views/Shared/_Layout.cshtml
@@ -19,13 +19,30 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                        <div class="d-flex align-items-center">
+							@if (User.IsInRole("admin") || User.IsInRole("employee"))
+                            {
+                                <div class="dropdown">
+                                    <button class="btn btn-light border" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Users
+                                    </button>
+                                    <ul class="dropdown-menu shadow-sm" aria-labelledby="dropdownMenuButton" style="border: 1px solid #dee2e6; border-radius: 0.25rem;">
+                                        <li>
+                                            <a class="dropdown-item" asp-controller="Users" asp-action="Index">
+                                                Users list
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Register" role="button">
+                                                Register new user
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
 
-                         @if (User.IsInRole("admin")) 
-                         { 
-                            <li class="nav-item"> 
-                                 <a class="nav-link text-dark" asp-controller="Users" asp-action="Index">Users</a> 
-                             </li> 
-                         } 
+
+                            }
+                        </div>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
