--- a/Projekt-programowanie/Views/Shared/_Layout.cshtml
+++ b/Projekt-programowanie/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Projekt-programowanie.styles.css" asp-append-version="true" />
+    <link href="https://cdn.syncfusion.com/ej2/20.3.47/material.css" rel="stylesheet" />
+    
 </head>
 <body>
     <header>
@@ -40,8 +42,26 @@
                                     </ul>
                                 </div>
 
-
+                                <div class="dropdown">
+                                    <button class="btn btn-light border" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Groups
+                                    </button>
+                                    <ul class="dropdown-menu shadow-sm" aria-labelledby="dropdownMenuButton" style="border: 1px solid #dee2e6; border-radius: 0.25rem;">
+                                        <li>
+                                            <a class="dropdown-item" asp-controller="Groups" asp-action="Index">
+                                                Groups list
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" asp-controller="Groups" asp-action="Create">
+                                                Create new group
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
                             }
+
+                            
                         </div>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -63,6 +83,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.syncfusion.com/ej2/20.3.47/dist/ej2.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
