--- a/Projekt-programowanie/Views/Shared/_Layout.cshtml
+++ b/Projekt-programowanie/Views/Shared/_Layout.cshtml
@@ -61,6 +61,15 @@
                                 </div>
                             }
 
+                            <div class="dropdown">
+                                <a asp-controller="Scheduler" asp-action="Index" class="btn btn-light border" type="button">
+                                    Scheduler
+                                </a>
+                          
+                            </div>
+
+
+
                             
                         </div>
                     </ul>
