--- a/Projekt-programowanie/Views/Shared/_Layout.cshtml
+++ b/Projekt-programowanie/Views/Shared/_Layout.cshtml
@@ -60,17 +60,14 @@
                                     </ul>
                                 </div>
                             }
-
-                            <div class="dropdown">
-                                <a asp-controller="Scheduler" asp-action="Index" class="btn btn-light border" type="button">
-                                    Scheduler
-                                </a>
-                          
-                            </div>
-
-
-
-                            
+                            @if(User.Identity.IsAuthenticated)
+                            {
+                                <div class="dropdown">
+                                    <a asp-controller="Scheduler" asp-action="Index" class="btn btn-light border" type="button">
+                                        Scheduler
+                                    </a>
+                                </div>
+                            } 
                         </div>
                     </ul>
                     <partial name="_LoginPartial" />
